# Waltham

./: CMakeLists.txt  README.md
weston-ivi-plugins/: CMakeLists.txt
weston-ivi-plugins/docs/: 1-waltham-client-and-receiver.md  2-waltham-how-to-build.md
weston-ivi-plugins/waltham-receiver/: CMakeLists.txt  README.md
weston-ivi-plugins/waltham-receiver/include/: wth-receiver-comm.h
weston-ivi-plugins/waltham-receiver/src/: wth-receiver-comm.c  wth-receiver-gst.c  wth-receiver-main.c
weston-ivi-plugins/waltham-transmitter/transmitter-plugin/: CMakeLists.txt  input.c  output.c  plugin.c  plugin.h  transmitter_api.h  weston.ini.transmitter
weston-ivi-plugins/waltham-transmitter/waltham-renderer/: CMakeLists.txt  waltham-renderer.c  waltham-renderer.h
